--- a/testGit.html
+++ b/testGit.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TestGitHub</title>
 </head>
 <body>
     <h4>Hello GitHub</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae earum consequatur iste recusandae explicabo, consequuntur maxime, libero beatae, enim minus ex adipisci. Distinctio odio dicta error laudantium mollitia nesciunt impedit!
+    </p>
 </body>
 </html>
