--- a/testGit.html
+++ b/testGit.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h4>Hello GitHub</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae earum consequatur iste recusandae explicabo, consequuntur maxime, libero beatae, enim minus ex adipisci. Distinctio odio dicta error laudantium mollitia nesciunt impedit!
-    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae earum consequatur iste recusandae explicabo, consequuntur maxime, libero beatae, enim minus ex adipisci. Distinctio odio dicta error laudantium mollitia nesciunt impedit!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae earum consequatur iste recusandae explicabo, consequuntur maxime, libero beatae, enim minus ex adipisci. Distinctio odio dicta error laudantium mollitia nesciunt impedit!</p>
 </body>
 </html>
